--- a/Применение_самых_простых_стратегий.ipynb
+++ b/Применение_самых_простых_стратегий.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "A100",
       "mount_file_id": "1BwQN10JS0Qjn9Xo0oJvGYzQF9IePqmjN",
-      "authorship_tag": "ABX9TyM9MeygkMiaTg5qZL+RtpUv",
+      "authorship_tag": "ABX9TyMu0ltbUxYQnWZlAva65Oxr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3910,8 +3910,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Direction of Price Movement (Направление движения цены)"
+      ],
+      "metadata": {
+        "id": "m00meVbVPky8"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def create_target_direction(df, future_period=5): # 5 - future_period, количество периодов вперед\n",
+        "    \"\"\"Создает целевую переменную для направления движения цены.\"\"\"\n",
+        "    df['Future_Price'] = df['Close'].shift(-future_period)  # Цена через future_period\n",
+        "    df['Price_Change'] = df['Future_Price'] - df['Close']\n",
+        "    df['Target_Direction'] = np.where(df['Price_Change'] > 0, 1, np.where(df['Price_Change'] < 0, -1, 0))\n",
+        "    df.dropna(inplace=True)\n",
+        "    return df"
+      ],
       "metadata": {
         "id": "ScM5be5d4H79"
       },
@@ -3919,8 +3936,24 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Future Return (Будущая доходность)"
+      ],
+      "metadata": {
+        "id": "r01F_As8PrVX"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def create_target_return(df, future_period=5):\n",
+        "    \"\"\"Создает целевую переменную для будущей доходности.\"\"\"\n",
+        "    df['Future_Price'] = df['Close'].shift(-future_period)\n",
+        "    df['Target_Return'] = np.log(df['Future_Price'] / df['Close'])\n",
+        "    df.dropna(inplace=True)\n",
+        "    return df"
+      ],
       "metadata": {
         "id": "2HvT1lEp4H9u"
       },
@@ -3928,8 +3961,26 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Probability of Crossing a Threshold (Вероятность пересечения порога)"
+      ],
+      "metadata": {
+        "id": "DzfNeEnTPvaz"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# (Пример - упрощенный, требует доработки)\n",
+        "def create_target_probability(df, threshold, future_period=5):\n",
+        "    \"\"\"Создает целевую переменную для вероятности достижения порога.\"\"\"\n",
+        "    df['Future_High'] = df['High'].rolling(window=future_period).max().shift(-future_period) # Наибольшая цена за период\n",
+        "    df['Target_Probability'] = np.where(df['Future_High'] >= threshold, 1, 0) # Если цена достигла порога, то 1, иначе 0\n",
+        "\n",
+        "    df.dropna(inplace=True)\n",
+        "    return df"
+      ],
       "metadata": {
         "id": "xlFZZxwV4H_g"
       },
